2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c: Plugged leaks which took the
	memory lost from 1.8Mb (33,498 blocks) to 36 bytes (1 block). Good
	old valgrind!

2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (tracker_crawler_start):
	Actually set the path before checking if it exists or not, eek.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Memory leak fix

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-xesam-live-search.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	Replaced a few strings with defines

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer-db.c:
	* src/tracker-indexer/tracker-indexer-db.h:
	* src/tracker-indexer/tracker-indexer.c:

	Transactions per TRANSACTION_MAX items
	One possible cause for the constraint errors fixed

2008-07-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer.h: 
	* src/trackerd/tracker-search.c: 
	* src/trackerd/tracker-keywords.c: 
	* src/trackerd/tracker-metadata.c: 
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-files.c: 
	* src/trackerd/tracker-daemon.c: 
	* src/trackerd/tracker-xesam-live-search.c: 
	* src/trackerd/tracker-db.c: 
	* src/trackerd/tracker-xesam-manager.c: 
	* src/trackerd/tracker-db.h: 
	* src/libtracker-db/tracker-db-manager.c: 
	* src/libtracker-db/tracker-db-manager.h: 
	* src/libtracker-common/tracker-service.h: 
	* src/libtracker-common/tracker-ontology.c: 
	* tests/libtracker-db/tracker-db-manager-test-attach.c: 
	* data/sqlite-stored-procs.sql: 


	Removes attach_iface and attach_all as this was broken by design

	Adds "Xesam" as possible service for get_db_interface_by_service
