@@ -1,4 +1,9 @@
 include $(top_srcdir)/Makefile.decl
 
-SUBDIRS = common libtracker-common trackerd scripts libtracker-db
+SUBDIRS = common \
+	libtracker-common \
+	trackerd \
+	scripts \
+	libtracker-db \
+	tracker-indexer
 
